--- a/sass/layout/_select-table.scss
+++ b/sass/layout/_select-table.scss
@@ -1,17 +1,28 @@
+@use "../abstracts/vars";
+
 :root[data-theme="light"] {
-    --svg-color: #333;
-    --text-color: #333;
+    --svg-color: vars.$ui_color_dark;
+    --text-color: vars.$ui_color_dark;
 }
 
 :root[data-theme="dark"] {
     --svg-color: #fff;
     --text-color: #fff;
+    --text-color-dark: hsl(360, 50%, 100%);
+}
+
+.page-wrapper {
+    display: grid;
+    min-height: 100vh;
+    max-height: 100vh;
+    grid-template-rows: auto 1fr auto;
 }
 
 .container {
     max-width: 600px;
     margin: 0 auto;
     padding: 0 1rem;
+    height: 100%;
 }
 
 .screen-reader-only {
@@ -34,7 +45,6 @@
     background-image: url("../../dummy-video.jpg");
     background-size: cover;
     background-position: center center;
-    filter: blur(4px);
 }
 
 .qr-scanner {
@@ -42,25 +52,92 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     text-align: center;
+    height: 100%;
 
     &__title {
         color: var(--text-color);
         font-family: "Poppins", sans-serif;
         font-weight: 600;
         text-transform: uppercase;
-        font-size: 1.125rem;
+        font-size: 2.441rem;
+        line-height: normal;
     }
 
     &__subtitle {
         color: var(--text-color);
+        font-size: 1.25rem;
+        text-transform: none;
+        line-height: normal;
+        font-weight: 400;
     }
 
     &__icon {
         fill: var(--svg-color);
         stroke: var(--svg-color);
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        height: 110%;
+        width: auto;
+    }
+}
+
+.qr-footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 2.575rem 0;
+}
+
+.manually-link {
+    color: var(--text-color-dark);
+    font-family: "Poppins", sans-serif;
+    font-size: 1rem;
+}
+
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    display: grid;
+    grid-template-columns: 1fr 200px 1fr;
+    grid-template-rows: 1fr 200px 1fr;
+    gap: 0px 0px;
+    grid-template-areas:
+        "shadow-top shadow-top shadow-top"
+        "shadow-left scanner shadow-right"
+        "shadow-bottom shadow-bottom shadow-bottom";
+
+    &__shadow-top {
+        grid-area: shadow-top;
     }
 
-    &__manual-link {
+    &__shadow-right {
+        grid-area: shadow-right;
+    }
+
+    &__shadow-bottom {
+        grid-area: shadow-bottom;
+    }
+
+    &__shadow-left {
+        grid-area: shadow-left;
+    }
+
+    &__shadow-top,
+    &__shadow-right,
+    &__shadow-bottom,
+    &__shadow-left {
+        background-color: rgba(0, 0, 0, 0.25);
+    }
+
+    &__scanner {
+        grid-area: scanner;
+        position: relative;
     }
 }
