--- a/sass/layout/_select-table.scss
+++ b/sass/layout/_select-table.scss
@@ -1,14 +1,34 @@
 @use "../abstracts/vars";
 
+:root {
+    --table-title-size: 2.441rem;
+    --table-subtitle-size: 1.25rem;
+}
+
 :root[data-theme="light"] {
-    --svg-color: vars.$ui_color_dark;
-    --text-color: vars.$ui_color_dark;
+    --svg-color: #{vars.$ui_color_dark};
+    --text-color: #{vars.$ui_color_dark};
 }
 
 :root[data-theme="dark"] {
     --svg-color: #fff;
     --text-color: #fff;
     --text-color-dark: hsl(360, 50%, 100%);
+}
+
+.scanner-title {
+    font-family: "Poppins", sans-serif;
+    font-weight: 600;
+    text-transform: uppercase;
+    font-size: var(--table-title-size);
+    line-height: normal;
+}
+
+.scanner-subtitle {
+    font-size: var(--table-subtitle-size);
+    text-transform: none;
+    line-height: normal;
+    font-weight: 400;
 }
 
 .page-wrapper {
@@ -42,7 +62,7 @@
     height: 100vh;
     object-fit: cover;
     z-index: -1;
-    background-image: url("../../dummy-video.jpg");
+    background-color: #fff;
     background-size: cover;
     background-position: center center;
 }
@@ -61,13 +81,13 @@
         font-family: "Poppins", sans-serif;
         font-weight: 600;
         text-transform: uppercase;
-        font-size: 2.441rem;
+        font-size: var(--table-title-size);
         line-height: normal;
     }
 
     &__subtitle {
         color: var(--text-color);
-        font-size: 1.25rem;
+        font-size: var(--table-subtitle-size);
         text-transform: none;
         line-height: normal;
         font-weight: 400;
@@ -134,6 +154,21 @@
     &__shadow-bottom,
     &__shadow-left {
         background-color: rgba(0, 0, 0, 0.25);
+    }
+
+    &__top-content {
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+    }
+
+    &__bottom-content {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: flex-end;
+        height: 100%;
+        padding: 3rem 0;
     }
 
     &__scanner {
