--- a/sass/layout/_select-table.scss
+++ b/sass/layout/_select-table.scss
@@ -57,9 +57,9 @@
 }
 
 .video-feed {
-    position: fixed;
-    width: 100vw;
-    height: 100vh;
+    position: absolute;
+    height: 100%;
+    width: 100%;
     object-fit: cover;
     z-index: -1;
     background-color: #fff;
@@ -68,13 +68,15 @@
 }
 
 .qr-scanner {
-    color: var(--text-color);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+
+    &.is-hidden {
+        display: none;
+    }
 
     &__title {
         color: var(--text-color);
@@ -119,11 +121,7 @@
 }
 
 .overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
+    height: 100%;
     display: grid;
     grid-template-columns: 1fr 200px 1fr;
     grid-template-rows: 1fr 200px 1fr;
