--- a/sass/layout/_home.scss
+++ b/sass/layout/_home.scss
@@ -6,7 +6,7 @@ body.is-open {
 }
 
 #beerlist_container {
-    margin-top: 20vh;
+    margin-top: 30px;
     padding: 0 30px;
     margin-bottom: 120px;
     width: 100vw;
